--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body, html {
 body {
     overflow: hidden;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: white;
+    color: rgba(240, 248, 255, 0.712);
     margin: 0;
     padding: 0;
     display: flex;
@@ -34,14 +34,6 @@ body {
 /* .mobile-noaccess {
     display: none;
 } */
-::selection {
-    background-color: transparent;
-    color: inherit;
-}
-::-moz-selection {
-    background-color: transparent;
-    color: inherit;
-}
 @keyframes bounce-background {
     from {
         background-position: 0 0px;
