--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,20 @@ body, html {
     width: 100%;
     height: 100%;
 }
+::-webkit-scrollbar {
+    width: .3rem;
+}
+::-webkit-scrollbar-track {
+    background: rgba(47,49,57,255);
+}
+::-webkit-scrollbar-thumb {
+    background: #4b4e5a;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
 body {
-    overflow: hidden;
+    overflow-x: hidden;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: rgba(240, 248, 255, 0.712);
     margin: 0;
