--- a/css/index.css
+++ b/css/index.css
@@ -3,17 +3,25 @@
         transform: translateX(100%);
     }
     to {
-        transform: translateX(-150%);
+        transform: translateX(-100%);
     }
-}
-#target {
-    margin-top: 800px; /* Для демонстрации эффекта прокрутки */
 }
 span.nickname {
     font-family: "Dancing Script", cursive;
     font-optical-sizing: auto;
+    font-weight: bold;
+    font-size: 4.375rem;
+    font-style: normal;
+    transition: color .2s ease-in-out;
 }
 div.container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    border-radius: 10px;
+    border: 2px solid rgba(0, 0, 0, 0.616);
     padding: 2.5rem;
     backdrop-filter: blur(.1875rem);
 }
@@ -26,29 +34,110 @@ div.experience-container {
     backdrop-filter: blur(.1875rem);
     height: fit-content;
     position: absolute;
-    top: 117%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: .2s ease-in-out;
-}
-div.experience-container p {
-    font-weight: 400;
 }
 div.social-icons {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+    justify-content: space-between;
 }
-::-moz-selection {
-    background-color: transparent;
-    color: inherit;
+span.nickname:hover {
+    color: white;
+    cursor: default;
+}
+i {
+    font-size: 40px;
+    transition: color .2s ease-in-out;
+    color: rgba(240, 248, 255, 0.418);
+    align-content: center;
+    align-items: center;
+}
+.fa-youtube:hover {
+    color: red;
+}
+.fa-discord:hover {
+    color: #5662f6;
+}
+.fa-steam:hover {
+    color: #3f53bb;
+}
+.fa-github:hover {
+    color: #9032ad;
+}
+.fa-telegram:hover {
+    color: #259cd8;
+}
+div.avatar img {
+    border: 1px solid black;
+    border-radius: 6.25rem;
+    align-content: center;
+    align-items: center;
+}
+hr {
+    border: none;
+    border-top: 2px solid #000000;
+}
+.controls {
+    /* display: flex;
+    flex-direction: column; */
+    align-items: center;
+    width: 100%;
+}
+div.controls button {
+    background: transparent;
+    border: 0;
+}
+div.controls button i {
+    font-size: 34px;
+    cursor: pointer;
+}
+div.controls button i:hover {
+    color: #3f53bb;
+}
+input[type="range"] {
+    height: 10%;
+    width: 100%;
+    margin: .625rem 0rem;
+    cursor: pointer;
+}
+input[type="range"]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 8px;
+    background: #1d1d1d;
+    border-radius: 5px;
+}
+input[type="range"]::-moz-range-track {
+    width: 100%;
+    height: 8px;
+    background: #1d1d1d;
+    border-radius: 5px;
+}
+input[type="range"]::-ms-track {
+    width: 100%;
+    height: 8px;
+    background: #000000;
+    border-radius: 5px;
+    border: none;
+}
+div.controls span {
+    display: flex !important;
+    flex-direction: row !important;
+    color: rgba(240, 248, 255, 0.418);
+    font-size: 14px;
+}
+button.mute {
+    position: relative;
+    right: 38%;
 }
 ::selection {
     background-color: transparent;
     color: inherit;
 }
-button.mute {
-    position: relative;
-    right: 38%;
+::-moz-selection {
+    background-color: transparent;
+    color: inherit;
 }
 div.headtext ul {
     list-style-type: none;
@@ -129,7 +218,4 @@ div.marquee li span {
 }
 .h6 {
     height: 1.5rem;
-}
-div.experience-container:hover {
-    color: white;
 }
