--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,9 @@ a:hover {
 h1, h2, h3, h4, h5, h6 {
     color: white;
 }
+.rounded-default {
+    border-radius: 5px;
+}
 @keyframes bounce-background {
     from {
         background-position: 0 0px;
