--- a/css/index.css
+++ b/css/index.css
@@ -7,10 +7,6 @@ span.nickname {
     transition: color .2s ease-in-out;
 }
 div.minecontainer {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     text-align: center;
     border-radius: 10px;
     border: 2px solid rgba(0, 0, 0, 0.616);
@@ -28,6 +24,8 @@ div.social-icons {
 span.nickname:hover {
     color: white;
     cursor: default;
+    backdrop-filter: blur(0rem);
+    z-index: 2;
 }
 i {
     font-size: 40px;
@@ -35,6 +33,14 @@ i {
     color: rgba(240, 248, 255, 0.418);
     align-content: center;
     align-items: center;
+}
+span#visit-count {
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+.fa-envelope:hover {
+    color: hsla(136, 53%, 43%, 1);
 }
 .fa-youtube:hover {
     color: red;
@@ -52,8 +58,7 @@ i {
     color: #259cd8;
 }
 div.avatar img {
-    border: 1px solid black;
-    border-radius: 30.25rem;
+    border: 1px solid rgb(58, 58, 58);
     align-content: center;
     align-items: center;
 }
@@ -110,12 +115,10 @@ div.controls span {
     font-size: 14px;
 }
 ::selection {
-    background-color: transparent;
-    color: inherit;
+    background-color: rgba(98, 98, 168, 0.473);
 }
 ::-moz-selection {
-    background-color: transparent;
-    color: inherit;
+    background-color: rgba(98, 98, 168, 0.473);
 }
 div.headtext ul {
     list-style-type: none;
@@ -137,21 +140,15 @@ ul a {
 .h-6 {
     height: 1.5rem;
 }
-.ui-tooltip {
-    background: rgba(0, 0, 0, 0.548) !important;
-    padding: 5px !important;
-    border-radius: 5px !important;
-    color: white !important;
-    font-size: 1rem !important;
-    border: 0 !important;
-    box-shadow: none !important;
-}
 div.marquee-container ul {
     display: flex;
     list-style-type: none;
     gap: 10px;
     padding: 0;
     margin: 0;
+}
+div.marquee-container {
+    width: 24.1875rem;
 }
 div.marquee-content li {
     white-space: nowrap;
@@ -168,8 +165,30 @@ div.marquee-content {
     background: rgba(128, 128, 128, 0.233);
     box-sizing: border-box;
     transition: 0.2s ease-in-out;
+    backdrop-filter: blur(0rem);
+    z-index: -1;
 }
 div.marquee-content:hover {
     transform: scale(1.1);
     background: rgba(128, 128, 128, 0.658);
+    color: white;
+}
+div.collapse-container {
+    align-items: start;
+    text-align: start;
+    max-width: max-content;
+    box-sizing: content-box;
+}
+div.collapse {
+    &.show {
+        width: 24.1875rem !important;
+    }
+}
+.collapsing {
+    width: 24.1875rem !important;
+}
+footer {
+    position: absolute;
+    text-align: center;
+    bottom: 0;
 }
