--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,9 @@ a:link {
     transition: color .3s;
 }
 a:visited {
-    text-decoration: underline;
+    color: #0088cc;
+    background-color: transparent;
+    text-decoration: underline !important;
 }
 a:hover {
     transition: color .3s;
